# inno-project-builder

./: .gitignore  00_DanhMucDuLieu_qhc.xlsx  00_DanhMucDuLieu_qhct.xlsx  00_DanhMucDuLieu_qhpk.xlsx  README.md  _check_excel.py  _check_openpyxl.py  _check_reportlab.py  _check_title.py  _debug_indent.py  _debug_pdf.py  _fix_indent.py  _fix_te.py  build_excel.py  build_pdf.py  project_init.py  pyproject.toml  release.bat  release.sh  requirements-release.txt  run_project_init.bat  tem_ex_qhc.json  tem_ex_qhct.json  tem_ex_qhpk.json  template_pdf.json  templates_config.json  test_QHC.xlsx  test_QHCT.xlsx  test_QHPK.xlsx
.github/workflows/: pages.yml  release.yml
_build_temp/project_init/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  xref-project_init.html
_build_temp/project_init/project_init/: Analysis-00.toc  COLLECT-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  project_init.pkg
_build_temp/project_init_portable/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  project_init_portable.pkg  xref-project_init_portable.html
_build_temp/project_init_portable/project_init_portable/: Analysis-00.toc  (+5 more)
assets/: README.md  test_tree_overview.py
clineTask/: tasks_done.md
docs/: index.html
src/: __init__.py  config.py  excel_generator.py  main.py  pdf_generator.py  template_engine.py
src/ui/: __init__.py  app.py
templates/: README.md
templates/QHC/: README.md
templates/QHCT/: README.md
templates/TOD/: README.md
tests/: test_excel_template.py  test_pdf_template.py  test_project_init_version.py  test_template_safety.py  test_tree_overview.py
