[project]
name = "project_init"
version = "0.1.0"
description = "Ứng dụng desktop tạo cấu trúc dự án theo template cho quy hoạch"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [ { name = "INNO", email = "noreply@example.com" } ]
dependencies = [
    "Pillow",
]

[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]

[tool.semantic_release]
version_variables = ["project_init.py:__version__"]
commit_message = "chore(release): bump to {version}"
changelog_file = "CHANGELOG.md"
build_command = ""
upload_to_pypi = false
upload_to_vcs_release = false
